adding submissions and groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_outcome_results)
 export(get_page)
 export(get_submission_single)
 export(get_submissions)
+export(get_submissions_answers)
 export(get_term_course_list)
 export(get_user_items)
 export(get_wpage)
