adding get all users

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(delete_wpage)
 export(do_query)
 export(duplicate_wpage)
 export(get_account_course_list)
+export(get_all_users)
 export(get_announcements)
 export(get_assignment_list)
 export(get_assignment_submissions)
