--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(search_courses)
 export(set_canvas_domain)
 export(set_canvas_token)
 export(show_wpage_front)
+export(split_quiz_question_answers)
 export(submit_file_upload_assignment)
 export(update_discussion_id)
 export(update_wpage)
