adding functions for question quiz answers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(iter_args_list)
 export(make_canvas_url)
 export(paginate)
 export(process_response)
+export(resolve_submission_quiz_answers)
 export(sc)
 export(search_courses)
 export(set_canvas_domain)
